--- a/Sharon-Nickson-transfer-page.html
+++ b/Sharon-Nickson-transfer-page.html
@@ -291,7 +291,7 @@
                                 <div class="bottom-box float-bob-x"></div>
                                 <h3 class="p5">Receipient Account Information</h3>
 											<!--=========== Contact form ==============-->
-											<form style="color:white" action="Sharon-Nickson-transfer.php" method="post">
+											<form style="color:white" action="Sharon-Nickson-transfer.html" method="post">
 	Account name<br>
     <input type="text" name="cf_name"><br>
 	Account number<br>
