--- a/Sharon-Nickson-transfer-page.html
+++ b/Sharon-Nickson-transfer-page.html
@@ -307,7 +307,7 @@
 	Country/State<br>
     <input type="text" name="cf_name"><br>
 	
-	<input type="submit" value="Send">
+	<input type="submit" href="Sharon-Nickson-transfer.html" value="Send">
 	<input type="reset" value="Clear">
 </form>
                             </div>
