--- a/Sharon-Nickson-transfer-page.html
+++ b/Sharon-Nickson-transfer-page.html
@@ -291,7 +291,7 @@
                                 <div class="bottom-box float-bob-x"></div>
                                 <h3 class="p5">Receipient Account Information</h3>
 											<!--=========== Contact form ==============-->
-											<form style="color:white" action="Sharon-Nickson-transfer.html" method="post">
+											<form style="color:white" action="Sharon-Nickson-transfer.html">
 	Account name<br>
     <input type="text" name="cf_name"><br>
 	Account number<br>
@@ -307,7 +307,7 @@
 	Country/State<br>
     <input type="text" name="cf_name"><br>
 	
-	<input type="submit" href="Sharon-Nickson-transfer.html" value="Send">
+	<input href="Sharon-Nickson-transfer.html" value="Send">
 	<input type="reset" value="Clear">
 </form>
                             </div>
