--- a/loginaccounts.html
+++ b/loginaccounts.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Harborview Bank | Login</title>
+        <title>Account Login | Harborview Bank</title>
+<meta name="description" content="Secure login for Harborview Bank customers. Access your online banking account and manage your finances safely.">
         <!-- Favicons Icons -->
         <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png" />
         <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
         <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png" />
         <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
-        <meta name="description" content="Finbank HTML 5 Template " />
         <!-- fonts -->
         <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700;800&display=swap"
             rel="stylesheet">
