--- a/index.html
+++ b/index.html
@@ -94,6 +94,16 @@
   font-size: 50px;
   color: rgba(253, 127, 0, 0.911);
 }
+.main-header-style1-top {
+  padding-bottom: 70px;
+}
+
+.main-header-style1-top__left .inner-title p {
+  font-weight: bold;
+  font-size: 50px;
+  color: rgba(253, 127, 0, 0.911);
+}
+
 .swiper-wrapper {
   height: 650px;
 }
