--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
             <!-- Header Top Left -->
             <div class="main-header-style1-top__left">
               <div class="looking-banking-box">
-                <div class="inner-title">
+                <div class="inner-title" style="width: 270PX;">
                   <img src="assets/images/resources/logo-003.png"
                        alt="Harborview Bank Logo"
                        title="Harborview Bank"
