--- a/index.html
+++ b/index.html
@@ -252,9 +252,9 @@
         <div class="auto-container">
           <div class="outer-box">
             <!-- Header Top Left -->
-            <div class="main-header-style1-top__left">
+            <div class="main-header-style1-top__left" style="width: 470PX;">
               <div class="looking-banking-box">
-                <div class="inner-title" style="width: 270PX;">
+                <div class="inner-title" >
                   <img src="assets/images/resources/logo-003.png"
                        alt="Harborview Bank Logo"
                        title="Harborview Bank"
