--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
                     </div>
                     <style>
                         .service {
-                            max-width: 800px;
+                            max-width: 80%;
                             margin: 0 auto 30px;
                             padding: 20px;
                             box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
