--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
                     </div>
                     <style>
                         .service {
-                            max-width: 80%;
+                            width: 90%;
                             margin: 0 auto 30px;
                             padding: 20px;
                             box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
@@ -567,44 +567,6 @@
 
     <!-- Template js -->
     <script src="assets/js/custom.js"></script>
-	
-	
-	<script language="javascript">
-    function check(form)/*function to check userid & password*/
-    {
-     /*the following code checkes whether the entered userid and password are matching*/
-       
-	  
-	  if(form.userid.value == "jhantil" && form.pswrd.value == "76401986007")
-      {
-        window.open('account-1.html')/*opens the target page while Id & password matches*/
-      }
-	  
-	  if(form.userid.value == "rosbit20" && form.pswrd.value == "76401986")
-      {
-        window.open('rosina-bittner.html')/*opens the target page while Id & password matches*/
-      }
-	  
-	  if(form.userid.value == "aismam20" && form.pswrd.value == "76401986")
-      {
-        window.open('aisha-mamudu.html')/*opens the target page while Id & password matches*/
-      }
-	  
-	  if(form.userid.value == "jwexler" && form.pswrd.value == "76401986")
-      {
-        window.open('john-wexler.html')/*opens the target page while Id & password matches*/
-      }
-	  
-	  if(form.userid.value == "rcooper" && form.pswrd.value == "76401986")
-      {
-        window.open('ralphcooper.html')/*opens the target page while Id & password matches*/
-      }
-     else
-     {
-       alert("Error Password or Username")/*displays error message*/
-      }
-    }
-    </script>
 
 </body>
 
