--- a/index.html
+++ b/index.html
@@ -87,6 +87,16 @@
       }, 3000);
     });
   </script>
+  <style>
+    @media (max-width: 991px) {
+  .main-header-style1-top,
+  .main-header-style1-bottom,
+  .main-menu {
+    display: block !important;
+  }
+}
+
+  </style>
 </head>
 <body>
     <div class="page-wrapper">
@@ -710,7 +720,7 @@
       <p>Mobile banking application with new & exciting features.</p>
       <div class="badges">
         <a href="https://play.google.com/store/apps/details?id=your.package.name">
-          <img src="assets/images/icon/en_badge_web_generic.png" alt="Get it on Google Play">
+          <img src="assets/images/icon/en_badge_web_generic.png" alt="Get it on Google Play" style="height: 50px;width: 70px;">
         </a>
         <a href="https://apps.apple.com/app/your-app-name/id123456789">
           <img src="https://developer.apple.com/app-store/marketing/guidelines/images/badge-download-on-the-app-store.svg" alt="Download on the App Store">
