--- a/index.html
+++ b/index.html
@@ -88,12 +88,70 @@
     });
   </script>
   <style>
-    @media (max-width: 991px) {
+ /* Hide big header parts on small screens */
+@media (max-width: 991px) {
   .main-header-style1-top,
   .main-header-style1-bottom,
   .main-menu {
-    display: block !important;
+    display: none;
   }
+
+  /* Show new mobile header */
+  .mobile-header {
+    display: block;
+    background: #fff;
+    padding: 10px 20px;
+    border-bottom: 1px solid #eee;
+  }
+}
+
+@media (min-width: 992px) {
+  .mobile-header {
+    display: none;
+  }
+}
+
+/* Style inner container */
+.mobile-header-inner {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+/* Logo & bank name */
+.mobile-logo {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+}
+
+.mobile-logo img {
+  width: 50px;
+  height: auto;
+  margin-right: 10px;
+}
+
+.mobile-bank-name {
+  font-size: 18px;
+  font-weight: bold;
+  color: #333;
+  font-family: 'Times New Roman', Times, serif;
+}
+
+/* Hamburger icon */
+.mobile-nav__toggler {
+  font-size: 24px;
+  color: #333;
+  text-decoration: none;
+}
+
+.mobile-nav__toggler i {
+  pointer-events: none;
+}
+.mobile-header {
+  position: sticky;
+  top: 0;
+  z-index: 999;
 }
 
   </style>
@@ -189,6 +247,19 @@
                     </div>
                 </div>
             </nav>
+            <!-- ✅ Compact Mobile Header -->
+<div class="mobile-header">
+  <div class="mobile-header-inner">
+    <a href="index.html" class="mobile-logo">
+      <img src="assets/images/resources/logo-003.png" alt="H-V-B Logo" />
+      <span class="mobile-bank-name">HARBORVIEW BANK</span>
+    </a>
+    <a href="#" class="mobile-nav__toggler">
+      <i class="fas fa-bars"></i>
+    </a>
+  </div>
+</div>
+
 
             <!--Start Main Header Style1 Bottom-->
             <div class="main-header-style1-bottom">
