--- a/index.html
+++ b/index.html
@@ -791,10 +791,10 @@
       <p>Mobile banking application with new & exciting features.</p>
       <div class="badges">
         <a href="https://play.google.com/store/apps/details?id=your.package.name">
-          <img src="assets/images/icon/en_badge_web_generic.png" alt="Get it on Google Play" style="height: 130px;width: 270px;">
+          <img src="assets/images/icon/en_badge_web_generic.png" alt="Get it on Google Play" style="height: 80px;width: 160px;">
         </a>
         <a href="https://apps.apple.com/app/your-app-name/id123456789">
-          <img src="https://developer.apple.com/app-store/marketing/guidelines/images/badge-download-on-the-app-store.svg" alt="Download on the App Store">
+          <img  style="height:50px" src="https://developer.apple.com/app-store/marketing/guidelines/images/badge-download-on-the-app-store.svg" alt="Download on the App Store">
         </a>
       </div>
     </div>
