--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 .mobile-bank-name {
   font-size: 18px;
   font-weight: bold;
-  color: #333;
+  color:rgba(253, 127, 0, 0.911);
   font-family: 'Times New Roman', Times, serif;
 }
 
@@ -794,7 +794,7 @@
           <img src="assets/images/icon/en_badge_web_generic.png" alt="Get it on Google Play" style="height: 80px;width: 160px;">
         </a>
         <a href="https://apps.apple.com/app/your-app-name/id123456789">
-          <img  style="height:50px" src="https://developer.apple.com/app-store/marketing/guidelines/images/badge-download-on-the-app-store.svg" alt="Download on the App Store">
+          <img src="https://developer.apple.com/app-store/marketing/guidelines/images/badge-download-on-the-app-store.svg" alt="Download on the App Store">
         </a>
       </div>
     </div>
