--- a/index.html
+++ b/index.html
@@ -902,7 +902,7 @@
             </span>
             <div class="logo-box">
                 <a href="index.html" aria-label="logo image">
-                    <img style="height:0px;width:0px;" src="assets/images/resources/mobile-nav-logo.png" alt="" />
+                   <img src="assets/images/resources/logo-003.png" alt="H-V-B Logo" title="">
                 </a>
             </div>
             <div class="mobile-nav__container"></div>
