--- a/index.html
+++ b/index.html
@@ -902,7 +902,7 @@
             </span>
             <div class="logo-box">
                 <a href="index.html" aria-label="logo image">
-                   <img src="assets/images/resources/logo-003.png" alt="H-V-B Logo" title="">
+                   <img src="assets/images/resources/logo-003.png" style="width:70px;height:60px;"alt="H-V-B Logo" title="">
                 </a>
             </div>
             <div class="mobile-nav__container"></div>
