--- a/index.html
+++ b/index.html
@@ -903,6 +903,7 @@
             <div class="logo-box">
                 <a href="index.html" aria-label="logo image">
                    <img src="assets/images/resources/logo-003.png" style="width:70px;height:60px;"alt="H-V-B Logo" title="">
+                   <span class="mobile-bank-name">HARBORVIEW BANK</span>
                 </a>
             </div>
             <div class="mobile-nav__container"></div>
