--- a/index.html
+++ b/index.html
@@ -513,10 +513,10 @@
   <div class="container">
     <h2>Our Trusted Partners</h2>
     <div class="partners-grid">
-      <img src="assets/images/partners/partner1.png" alt="Partner 1">
-      <img src="assets/images/partners/partner2.png" alt="Partner 2">
-      <img src="assets/images/partners/partner3.png" alt="Partner 3">
-      <img src="assets/images/partners/partner4.png" alt="Partner 4">
+      <img src="assets/images/partners/partner1.svg" alt="Partner 1">
+      <img src="assets/images/partners/partner2.svg" alt="Partner 2">
+      <img src="assets/images/partners/partner3.svg" alt="Partner 3">
+      <img src="assets/images/partners/partner4.svg" alt="Partner 4">
     </div>
   </div>
 </section>
