--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
   <div class="mobile-header-inner">
     <a href="index.html" class="mobile-logo">
       <img src="assets/images/resources/logo-003.png" alt="H-V-B Logo" />
-      <span class="mobile-bank-name">HARBORVIEW BANK</span>
+      <span style="font-size:40px;" class="mobile-bank-name">HARBORVIEW BANK</span>
     </a>
   </div>
 </div>
@@ -661,7 +661,7 @@
        
             </style>
 <div class="mobile-nav__wrapper" style="background-color: rgba(250, 190, 118, 0.945);width:340px;height:500px">
-        
+<div style="display: hidden ;" class="mobile-nav__overlay mobile-nav__toggler"></div>
         <div class="mobile-nav__content">
             <span class="mobile-nav__close mobile-nav__toggler">
                 <i class="fas fa-plus"></i>
