--- a/loginaccounts.html
+++ b/loginaccounts.html
@@ -349,9 +349,9 @@ loginForm.addEventListener("submit", function(event) {
     
 
     // Check if username and password are correct (for demonstration purposes)
-    if (username === "Sharon Nickson" && password === "Nickson@2465") {
+    if (username === "Stacy Garner" && password === "Stacybae@2465") {
         // Redirect to fatima-open-account.html
-        window.location.href = "Sharon-Nickson-account-open.html";
+        window.location.href = "gdhxgccvgf5fxcv234-stacy-garner.html";
     } else {
         // Replace with actual error handling if credentials are incorrect
         errorMessage.style.display = "block";
