Update and rename Sharon-Nickson-account-open.html to gdhxgccvgf5fxcv234-stacy-garner-account-open.html

--- a/gdhxgccvgf5fxcv234-stacy-garner-account-open.html
+++ b/gdhxgccvgf5fxcv234-stacy-garner-account-open.html
@@ -222,7 +222,7 @@
                             <div class="single-sidebar-box-style1">
                                 <div class="sidebar-title">
                                     <div class="dot-box"></div>
-                                    <h3>Welcome Sharon Nickson</h3>
+                                    <h3>Welcome Stacy Garner</h3>
                                 </div>
                                 <div class="card-types-box">
                                     <table class="responsive-table">
@@ -234,19 +234,19 @@
       <th>Date</th>
       <th>Deposit</th>
       <th>Withdrawal</th>
-      <th>Discription</th>
+      <th>Description</th>
 	  <th>Balance</th>
       <th>Total</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <td>25/06/2024</td>
-      <td>£25,000,000.00  </td>
+      <td>07/02/2025</td>
+      <td>£1,812,560.00  </td>
 	  <td></td>
-      <td>Deposit by Sharon Nickson</td>
-      <td>>£25,000,000.00 </td>
-      <td>>£25,000,000.00 </td>
+      <td>Transfer from Joseph Wilson</td>
+      <td>>£1,812,560.00 </td>
+      <td>>£1,812,560.00 </td>
     </tr>
     
 	
@@ -286,7 +286,7 @@
       <td></td>
       <td></td>
       <td><div class="btns-box">
-                                    <a class="btn-one" href="Sharon-Nickson-transfer-page.html">
+                                    <a class="btn-one" href="ch54hk7i84ghh4v4-stacy-garner-transfer-page.html">
                                         <span class="txt">Transfer</span>
                                     </a>
                                 </div></td>
@@ -317,10 +317,10 @@
                                         <img src="assets/images/resources/logo-1.png" alt="">
                                     </a>
                                 </div>
-                                <h3>Sharon Nickson</h3>
+                                <h3>Stacy Garner</h3>
                                 <ul>
-                                    <li><i class="fas fa-road"></i></span> 503 Tillman Street,</li>
-                                    <li><i class="fas fa-road"></i></span> Valdosta, GA</li>
+                                    <li><i class="fas fa-road"></i></span> 525 Liberty Road,</li>
+                                    <li><i class="fas fa-road"></i></span> Gold Hill, NC 28071</li>
                                 </ul>
                                 <div class="btns-box">
                                     <a class="btn-one" href="index.html">
@@ -354,7 +354,7 @@
             <footer>
                 <div class="container">
                     <div class="footer-content">
-                        <p>&copy; 2024 HARBORVIEW BANK. All rights reserved.</p>
+                        <p>&copy; 2004 HARBORVIEW BANK. All rights reserved.</p>
                         <p>Hours for Banking: Mon-Fri 9am-5pm</p>
                         <p>Customer Service: +44 (0) 003000000</p>
                         <div class="social-media">
