--- a/initiate-cjjgfhgfjgc5675gff3467-stacy-garner-process-page.html
+++ b/initiate-cjjgfhgfjgc5675gff3467-stacy-garner-process-page.html
@@ -277,7 +277,7 @@
     
     <div class="content" id="main_content" style="display: none;">
       <p><br>
-        <h3 class="p4">Sorry, <a href="#"> Sharon Nickson</a>,</h3> <br><h3 class="p4"><span>Error <strong> Processing</strong></span>:</h3>
+        <h3 class="p4">Sorry, <a href="#"> Stacy Garner</a>,</h3> <br><h3 class="p4"><span>Error <strong> Processing</strong></span>:</h3>
 		<br>         Please contact our Customer Service at info@HarborViewBank.com concerning this transfer Error....           <br><br>
       </p>
       <p>
@@ -458,10 +458,10 @@ body {
                                         <img src="assets/images/resources/logo-1.png" alt="">
                                     </a>
                                 </div>
-                                <h3>Sharon Nickson</h3>
+                                <h3>Stacy Garner</h3>
                                 <ul>
-                                    <li><i class="fas fa-road"></i> 503 Tillman Street,</li>
-                                    <li><i class="fas fa-road"></i> Valdosta, GA</li>
+                                    <li><i class="fas fa-road"></i> 525 Liberty Road,</li>
+                                    <li><i class="fas fa-road"></i>Gold Hill, NC 28071 </li>
                                 </ul>
                                 <div class="btns-box">
                                     <a class="btn-one" href="index.html">
@@ -486,7 +486,7 @@ body {
        <footer>
         <div class="container">
             <div class="footer-content">
-                <p>&copy; 2024 HARBORVIEW BANK. All rights reserved.</p>
+                <p>&copy; 2004 HARBORVIEW BANK. All rights reserved.</p>
                 <p>Hours for Banking: Mon-Fri 9am-5pm</p>
                 <p>Customer Service: +44 (0) 003000000</p>
                 <div class="social-media">
