--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
     });
   </script>
   <style>
- 
+ a {
+	 text-decoration:none;
+ }
   </style>
 </head>
 <body>
@@ -144,10 +146,7 @@
 
                             <div class="main-menu-style1-left">
                                 <div class="main-menu-box">
-                                    <a href="#" class="mobile-nav__toggler">
-                                        <i class="fas fa-bars"></i>
-
-                                    </a>
+                                    
 
                                     <ul class="main-menu__list">
                                         <li >
@@ -189,6 +188,10 @@
       <img src="assets/images/resources/logo-003.png" alt="H-V-B Logo" />
       <span style="font-size:20px;" class="mobile-bank-name">HARBORVIEW BANK</span>
     </a>
+	  <a href="#" class="mobile-nav__toggler">
+                                        <i class="fas fa-bars"></i>
+
+	  </a>
   </div>
 </div>
 
