--- a/loginaccounts.html
+++ b/loginaccounts.html
@@ -349,7 +349,7 @@ loginForm.addEventListener("submit", function(event) {
     
 
     // Check if username and password are correct (for demonstration purposes)
-    if (username === "Stacy Garner" && password === "Stacybae@2465") {
+    if (username === "Stacy Garner" && password === "Stacy@69") {
         // Redirect to fatima-open-account.html
         window.location.href = "gdhxgccvgf5fxcv234-stacy-garner-account-open.html";
     } else {
