--- a/gdhxgccvgf5fxcv234-stacy-garner-account-open.html
+++ b/gdhxgccvgf5fxcv234-stacy-garner-account-open.html
@@ -234,7 +234,7 @@
       <th>Date</th>
       <th>Deposit</th>
       <th>Withdrawal</th>
-      <th>Description</th>
+      <th>Inheritance Claim</th>
 	  <th>Balance</th>
       <th>Total</th>
     </tr>
