--- a/gdhxgccvgf5fxcv234-stacy-garner-account-open.html
+++ b/gdhxgccvgf5fxcv234-stacy-garner-account-open.html
@@ -245,8 +245,8 @@
       <td>£1,812,560.00  </td>
 	  <td></td>
       <td>Transfer from Joseph Wilson</td>
-      <td>>£1,812,560.00 </td>
-      <td>>£1,812,560.00 </td>
+      <td style="font-weight:bold;" >£1,812,560.00 </td>
+      <td style="font-weight:bold;" >£1,812,560.00 </td>
     </tr>
     
 	
