--- a/loginaccounts.html
+++ b/loginaccounts.html
@@ -19,7 +19,7 @@ body, html {
 }
 
 .hero {
-  background: url('https://www.freepik.com/free-ai-image/cyber-security-concept-digital-art_236289582.htm#fromView=search&page=2&position=35&uuid=3d17e31e-49de-43c1-bb53-592efd3b1f46&query=orange+bank+security+login+background') center/cover no-repeat;
+  background: url('../images/backgrounds/login-bg.jpg') center/cover no-repeat;
   position: relative;
   height: 100%;
 }
