--- a/loginaccounts.html
+++ b/loginaccounts.html
@@ -19,7 +19,7 @@ body, html {
 }
 
 .hero {
-  background: url('../images/backgrounds/login-bg.jpg') center/cover no-repeat;
+  background: url('assets/images/backgrounds/login-bg.jpg') center/cover no-repeat;
   position: relative;
   height: 100%;
 }
