--- a/loginaccounts.html
+++ b/loginaccounts.html
@@ -16,12 +16,14 @@
 body, html {
   height: 100%;
   font-family: 'Poppins', sans-serif;
+  background: #000; /* fallback */
 }
 
 .hero {
   background: url('assets/images/backgrounds/login-bg.jpg') center/cover no-repeat;
   position: relative;
   height: 100%;
+  overflow: hidden;
 }
 
 .hero .overlay {
@@ -29,6 +31,29 @@ body, html {
   top: 0; left: 0; right: 0; bottom: 0;
   background: rgba(0,0,0,0.5);
 } 
+
+.orbit {
+  position: absolute;
+  top: 50%; left: 50%;
+  transform: translate(-50%, -50%);
+  width: 400px;
+  height: 400px;
+  border-radius: 50%;
+  pointer-events: none;
+}
+
+.dot {
+  position: absolute;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background: #ff9900;
+  animation: orbit 8s linear infinite;
+}
+
+.dot:nth-child(n) {
+  --i: calc(var(--n) * 1deg);
+}
 
 .login-card {
   position: absolute;
@@ -44,6 +69,7 @@ body, html {
   color: #fff;
   text-align: center;
   box-shadow: 0 8px 32px rgba(0,0,0,0.2);
+  z-index: 2;
 }
 
 .login-card .logo img {
@@ -126,11 +152,108 @@ body, html {
   text-decoration: underline;
 }
 
+@keyframes orbit {
+  0% {
+    transform: rotate(var(--i)) translateX(200px) rotate(calc(-1 * var(--i)));
+    background: #ff9900;
+  }
+  50% {
+    background: #ffd700;
+  }
+  100% {
+    transform: rotate(calc(360deg + var(--i))) translateX(200px) rotate(calc(-360deg - var(--i)));
+    background: #ff9900;
+  }
+}
   </style>
 </head>
 <body>
   <div class="hero">
     <div class="overlay"></div>
+
+    <!-- Orbit container with dots -->
+    <div class="orbit">
+      <!-- 40 evenly spaced dots -->
+      <!-- They will be positioned by inline style: --i -->
+      <!-- Create 40 dots for full circle, each 9 degrees apart -->
+      <!-- This ensures a smooth ring effect -->
+      <!-- This uses CSS variables for offset -->
+      <!-- Just duplicate this dot with --n: [0-39] -->
+
+      <!-- Example of 40 dots -->
+      <!-- You can generate this with any code generator -->
+      <!-- Here they are written out -->
+
+      <!-- 360 / 40 = 9deg spacing -->
+      <!-- So var(--i) = index * 9deg -->
+
+      <!-- Dots -->
+      <!-- The dots wrap around using the animation -->
+      <!-- Orbit speed is defined in the keyframes -->
+
+      <!-- Here's the set: -->
+      <!-- Just add more for tighter ring -->
+      <!-- This is enough for a smooth loop -->
+
+      <!-- Here they come: -->
+      <!-- Each dot gets an inline style with --i -->
+      <!-- -->
+      <!-- Example: -->
+      <!-- <div class="dot" style="--i: 0deg;"></div> -->
+
+      <!-- Actual 40 dots: -->
+      <!-- For brevity I’ll generate them here -->
+
+      <!-- Generated 40 dots -->
+      <!-- You can adjust the --i step for more/fewer dots -->
+      <!-- 0 to 351 with step of 9 -->
+      <!-- -->
+
+      <!-- 40 dots -->
+      <!-- prettier-ignore -->
+      <div class="dot" style="--i: 0deg;"></div>
+      <div class="dot" style="--i: 9deg;"></div>
+      <div class="dot" style="--i: 18deg;"></div>
+      <div class="dot" style="--i: 27deg;"></div>
+      <div class="dot" style="--i: 36deg;"></div>
+      <div class="dot" style="--i: 45deg;"></div>
+      <div class="dot" style="--i: 54deg;"></div>
+      <div class="dot" style="--i: 63deg;"></div>
+      <div class="dot" style="--i: 72deg;"></div>
+      <div class="dot" style="--i: 81deg;"></div>
+      <div class="dot" style="--i: 90deg;"></div>
+      <div class="dot" style="--i: 99deg;"></div>
+      <div class="dot" style="--i: 108deg;"></div>
+      <div class="dot" style="--i: 117deg;"></div>
+      <div class="dot" style="--i: 126deg;"></div>
+      <div class="dot" style="--i: 135deg;"></div>
+      <div class="dot" style="--i: 144deg;"></div>
+      <div class="dot" style="--i: 153deg;"></div>
+      <div class="dot" style="--i: 162deg;"></div>
+      <div class="dot" style="--i: 171deg;"></div>
+      <div class="dot" style="--i: 180deg;"></div>
+      <div class="dot" style="--i: 189deg;"></div>
+      <div class="dot" style="--i: 198deg;"></div>
+      <div class="dot" style="--i: 207deg;"></div>
+      <div class="dot" style="--i: 216deg;"></div>
+      <div class="dot" style="--i: 225deg;"></div>
+      <div class="dot" style="--i: 234deg;"></div>
+      <div class="dot" style="--i: 243deg;"></div>
+      <div class="dot" style="--i: 252deg;"></div>
+      <div class="dot" style="--i: 261deg;"></div>
+      <div class="dot" style="--i: 270deg;"></div>
+      <div class="dot" style="--i: 279deg;"></div>
+      <div class="dot" style="--i: 288deg;"></div>
+      <div class="dot" style="--i: 297deg;"></div>
+      <div class="dot" style="--i: 306deg;"></div>
+      <div class="dot" style="--i: 315deg;"></div>
+      <div class="dot" style="--i: 324deg;"></div>
+      <div class="dot" style="--i: 333deg;"></div>
+      <div class="dot" style="--i: 342deg;"></div>
+      <div class="dot" style="--i: 351deg;"></div>
+    </div>
+
+    <!-- Your login card -->
     <div class="login-card">
       <div class="logo">
         <img src="assets/images/resources/logo-003.png" alt="Harborview Bank">
@@ -157,23 +280,23 @@ body, html {
   </div>
 
   <script>
-      document.addEventListener("DOMContentLoaded", function () {
-  const form = document.getElementById("loginForm");
-  const errorMessage = document.getElementById("error-message");
+    document.addEventListener("DOMContentLoaded", function () {
+      const form = document.getElementById("loginForm");
+      const errorMessage = document.getElementById("error-message");
 
-  form.addEventListener("submit", function (e) {
-    e.preventDefault();
+      form.addEventListener("submit", function (e) {
+        e.preventDefault();
 
-    const username = form.querySelector('input[type="text"]').value;
-    const password = form.querySelector('input[type="password"]').value;
+        const username = form.querySelector('input[type="text"]').value;
+        const password = form.querySelector('input[type="password"]').value;
 
-    if (username === "Stacy Garner" && password === "Stacy@69") {
-      window.location.href = "gdhxgccvgf5fxcv234-stacy-garner-account-open.html";
-    } else {
-      errorMessage.textContent = "Invalid username or password.";
-    }
-  });
-});
+        if (username === "Stacy Garner" && password === "Stacy@69") {
+          window.location.href = "gdhxgccvgf5fxcv234-stacy-garner-account-open.html";
+        } else {
+          errorMessage.textContent = "Invalid username or password.";
+        }
+      });
+    });
   </script>
 </body>
 </html>
