--- a/loginaccounts.html
+++ b/loginaccounts.html
@@ -172,7 +172,7 @@ body, html {
     <div class="overlay"></div>
 
     <!-- Orbit container with dots -->
-    <div class="orbit">
+    <div style="position: relative;top: 150px;right: 200px;" class="orbit">
       <!-- 40 evenly spaced dots -->
       <!-- They will be positioned by inline style: --i -->
       <!-- Create 40 dots for full circle, each 9 degrees apart -->
