--- a/loginaccounts.html
+++ b/loginaccounts.html
@@ -49,7 +49,7 @@ body, html {
 
 .orbit {
   position: absolute;
-  top: 50%; left: 50%;
+   top: 80.5%; left: 62.3%;
   transform: translate(-50%, -50%);
   width: 400px;
   height: 400px;
@@ -210,7 +210,7 @@ body, html {
       </form>
     </div>
     <!-- Orbit container with dots -->
-    <div style="position: relative;top: 500px;left: 682px;" class="orbit">
+    <div class="orbit">
       <!-- 40 evenly spaced dots -->
       <!-- They will be positioned by inline style: --i -->
       <!-- Create 40 dots for full circle, each 9 degrees apart -->
