--- a/loginaccounts.html
+++ b/loginaccounts.html
@@ -48,8 +48,8 @@ body, html {
 } 
 
 .orbit {
-  position: absolute;
-   top: 80.5%; left: 62.3%;
+  position: relative;
+  top: 60%; left: 62.3%;
   transform: translate(-50%, -50%);
   width: 400px;
   height: 400px;
@@ -58,7 +58,7 @@ body, html {
 }
 
 .dot {
-  position: absolute;
+  position: relative;
   width: 70px;
   height: 8px;
   border-radius: 10%;
