--- a/loginaccounts.html
+++ b/loginaccounts.html
@@ -35,7 +35,7 @@ body, html {
 }
 
 .hero {
-  background: url('assets/images/backgrounds/login-bg.jpg') center/cover no-repeat;
+  background: url('assets/images/backgrounds/login-bg.jpg') center no-repeat;
   position: relative;
   height: 100%;
   overflow: hidden;
@@ -44,7 +44,7 @@ body, html {
 .hero .overlay {
   position: absolute;
   top: 0; left: 0; right: 0; bottom: 0;
-  background: rgba(0,0,0,0.5);
+  background: #392b58a2;
 } 
 
 .orbit {
