--- a/loginaccounts.html
+++ b/loginaccounts.html
@@ -35,7 +35,7 @@ body, html {
 }
 
 .hero {
-  background: url('assets/images/backgrounds/login-bg.jpg') center no-repeat;
+  background: url('assets/images/backgrounds/login-bg.jpg') center/cover no-repeat;
   position: relative;
   height: 100%;
   overflow: hidden;
