--- a/loginaccounts.html
+++ b/loginaccounts.html
@@ -19,6 +19,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png" />
   <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
 
+  <link rel="preload" href="assets/images/backgrounds/login-bg.jpg" as="image">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
   <style>
       /* Reset */
