--- a/initiate-cjjgfhgfjgc5675gff3467-stacy-garner-process-page.html
+++ b/initiate-cjjgfhgfjgc5675gff3467-stacy-garner-process-page.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png" />
     <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
-    <meta name="description" content="Finbank HTML 5 Template " />
+    <meta name="description" content="Transfer Initiation" />
     <!-- fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700;800&display=swap"
         rel="stylesheet">
@@ -256,7 +256,7 @@
                         <div class="sidebar-box-style1">
                             <!--Start Single Sidebar Box Style1-->
                             <div class="single-sidebar-box-style1">
-                                <div class="sidebar-title">
+                                <div class="sidebar-title"> 
                                     <div class="dot-box"></div>
                                     <h3>Online Wire Money Transfer:</h3>
                                 </div>
