--- a/contact.html
+++ b/contact.html
@@ -789,6 +789,9 @@ body {
 .form-group{
     width: 70%;
 }
+.header .inner-title .contact-info {
+    width:80%;
+}
 
             </style>
         </section>
