--- a/contact.html
+++ b/contact.html
@@ -792,6 +792,15 @@ body {
     color: #ff9a02;
 }
 
+.customer-care-numbers-table td h3 {
+  font-size: 16px; 
+}
+
+.customer-care-numbers-table td ul {
+  padding-left: 0;
+  list-style: none;
+}
+
 @media (max-width: 768px) {
   .customer-care-numbers-table th,
   .customer-care-numbers-table td {
