--- a/contact.html
+++ b/contact.html
@@ -352,7 +352,7 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3734.144535208136!2d-81.38500212448445!3d19.286932484839347!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f8c24b712299e21%3A0xaac5161bc15650f1!2sGeorge%20Town%2C%20Cayman%20Islands!5e0!3m2!1sen!2sgh!4v1715587196647!5m2!1sen!2sgh" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
             <div class="google-map-content-box" style="height:30px">
-                <div style="padding-left: 50%;" class="branch-atm-tab">
+                <div style="padding-left: 30%;position: relative;left:-20px;" class="branch-atm-tab">
                     <!--Start Branch Atm Tab Buttom-->
                     <div class="branch-atm-tab__button" >
                         <ul class="tabs-button-box" style="height:40px">
