--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,16 @@
     <!-- Template styles -->
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/responsive.css" />
-
+<style>
+    body {
+    font-family: 'Helvetica', sans-serif;
+    background-color: #f7f7f7;
+    color: #444;
+    margin: 0;
+    padding: 0;
+    overflow-x:hidden;
+}
+</style>
 
 </head>
 
@@ -522,13 +531,6 @@
             <style>
                 /* General Styles */
 /* General Styles */
-body {
-    font-family: 'Helvetica', sans-serif;
-    background-color: #f7f7f7;
-    color: #444;
-    margin: 0;
-    padding: 0;
-}
 
 .container {
     width: 90%;
@@ -682,6 +684,7 @@ body {
     width: 90%;
     border: none;
     border-radius: 10px;
+    align-self: center;
 }
 
 .google-map-content-box {
