--- a/contact.html
+++ b/contact.html
@@ -685,7 +685,7 @@
     width: 90%;
     border: none;
     border-radius: 10px;
-    
+    align-self: center;
 }
 
 .google-map-content-box {
@@ -696,6 +696,7 @@
     background:inherit;
     padding: 25px;
     border-radius: 10px;
+    align-self: center;
 }
 
 /* Customer Care Numbers Area */
