--- a/contact.html
+++ b/contact.html
@@ -610,6 +610,66 @@
 
 /* Contact Form Styles */
 .contact-form {
+    background: #f9f9f9;
+    padding: 35px;
+    border-radius: 10px;
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.1);
+}
+
+.contact-form .form-group {
+    margin-bottom: 20px;
+}
+
+.contact-form .form-group label {
+    font-weight: bold;
+    display: block;
+    margin-bottom: 8px;
+}
+
+.contact-form .input-box {
+    max-width: 500px;
+    margin: 0 auto;
+}
+
+.contact-form .input-box input,
+.contact-form .input-box textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    transition: border-color 0.3s, box-shadow 0.3s;
+}
+
+.contact-form .input-box input:focus,
+.contact-form .input-box textarea:focus {
+    border-color: #ff9a02;
+    box-shadow: 0 0 8px rgba(0, 102, 204, 0.2);
+}
+
+.contact-form .input-box textarea {
+    height: 150px;
+    resize: none;
+}
+
+.contact-form .button-box {
+    text-align: center;
+}
+
+.contact-form .button-box button {
+    background: #ff9a02;
+    color: #ffffff;
+    padding: 12px 30px;
+    border: none;
+    border-radius: 25px;
+    cursor: pointer;
+    transition: background 0.3s, transform 0.3s;
+}
+
+.contact-form .button-box button:hover {
+    background: #ff9a02;
+    transform: translateY(-3px);
+}
+.contact-form {
   background: #fff;
   padding: 40px;
   border-radius: 8px;
