--- a/contact.html
+++ b/contact.html
@@ -278,7 +278,9 @@
                     </div>
 
 
-                    <form id="contact-form">
+                    <div class="col-xl-6">
+  <div class="contact-form">
+  <form id="contact-form">
   <!-- Name -->
   <div class="form-group">
     <label for="formName">Name</label>
@@ -319,6 +321,9 @@
     </button>
   </div>
 </form>
+  </div>
+</div>
+
 <!-- EmailJS SDK -->
 <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
 <script>
