--- a/gdhxgccvgf5fxcv234-stacy-garner-account-open.html
+++ b/gdhxgccvgf5fxcv234-stacy-garner-account-open.html
@@ -414,15 +414,16 @@
                 }
                 
             </style>
-    <div class="mobile-nav__wrapper" style="background-color: rgba(250, 190, 118, 0.945);width:340px;height:500px">
-        <div class="mobile-nav__overlay mobile-nav__toggler"></div>
+   <div class="mobile-nav__wrapper" style="background-color: rgba(250, 190, 118, 0.945);width:340px;height:500px">
+<div style="display: hidden ;" class="mobile-nav__overlay mobile-nav__toggler"></div>
         <div class="mobile-nav__content">
             <span class="mobile-nav__close mobile-nav__toggler">
                 <i class="fas fa-plus"></i>
             </span>
             <div class="logo-box">
-                <a href="index.html" aria-label="logo image">
-                    <img style="height:0px;width:0px;" src="assets/images/resources/mobile-nav-logo.png" alt="" />
+                <a style="text-decoration: none;" href="index.html" aria-label="logo image">
+                   <img src="assets/images/resources/logo-003.png" style="width:70px;height:60px;position: relative;top: 22px;"alt="H-V-B Logo" title="">
+                   <span class="mobile-bank-name">HARBORVIEW BANK</span>
                 </a>
             </div>
             <div class="mobile-nav__container"></div>
